--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This project contains programming assignments made for Standford online course of Design and Analysis of Algorithms I
 
-The code would be basically in Ruby, but do not expect much since I'm just learning :)
+The code would be basically in Java and Ruby, but do not expect much since I'm just studying so code may look sloppy :)
