--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 This project contains programming assignments made for Standford online course of Design and Analysis of Algorithms I
 
 The code would be basically in Java and Ruby, but do not expect much since I'm just studying so code may look sloppy :)
+
+However, I DO NOT encourage using this repo as a solution box for programming assignments. Using someone else' code does not make much sence in terms of learning, right? :)
+But feel free to review and discuss my solutions as well as code difference between Ruby and Java.
