--- a/README
+++ b/README
@@ -2,5 +2,5 @@ This project contains programming assignments made for Standford online course o
 
 The code would be basically in Java and Ruby, but do not expect much since I'm just studying so code may look sloppy :)
 
-However, I DO NOT encourage using this repo as a solution box for programming assignments. Using someone else' code does not make much sence in terms of learning, right? :)
-But feel free to review and discuss my solutions as well as code difference between Ruby and Java.
+I DO NOT encourage using this repo as a solution box for programming assignments. Just using someone else' code does not make much sence in terms of learning, right? :)
+However, feel free to review and discuss my code  as well as difference between Ruby and Java.
