--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-This project contains programming assignments made for Standford online course of Design and Analysis of Algorithms I
+This project contains programming assignments made for Standford online course of Design and Analysis of Algorithms I which was run at Coursera platform March-April 2012.
 
 The code would be basically in Java and Ruby, but do not expect much since I'm just studying so code may look sloppy :)
 
 I DO NOT encourage using this repo as a solution box for programming assignments. Just using someone else' code does not make much sence in terms of learning, right? :)
-However, feel free to review and discuss my code  as well as difference between Ruby and Java.
+However, feel free to review and discuss my code as well as difference between Ruby and Java.
